--- a/index.html
+++ b/index.html
@@ -5,31 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>自己紹介</title>
     <!-- reset.css ress -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body class="body">
-    <header class="header">
-      <nav class="nav">
-        <ul>
-          <li><a href="#profile">プロフィール</a></li>
-          <li><a href="#hobbies">趣味</a></li>
-        </ul>
-      </nav>
-      <h1>わたしの自己紹介サイト</h1>
-    </header>
+    <div class="cover cover-home">
+      <header class="header">
+        <nav class="nav">
+          <ul>
+            <li><a href="#profile">プロフィール</a></li>
+            <li><a href="#hobbies">趣味</a></li>
+          </ul>
+        </nav>
+        <h1>わたしの自己紹介サイト</h1>
+      </header>
+    </div>
     <main>
       <section id="profile">
         <h2>プロフィール</h2>
         <p>
-          こんにちは、わたしはsuzakuです。これはわたしの自己紹介サイトです。
+          こんにちは、わたしは[あなたの名前]です。これはわたしの自己紹介サイトです。
         </p>
       </section>
       <section id="hobbies">
         <h2>趣味</h2>
         <ul>
-          <li>ゲーム</li>
-          <li>タッっきゅう</li>
+          <li>読書</li>
+          <li>旅行</li>
           <li>プログラミング</li>
         </ul>
       </section>
