--- a/index.html
+++ b/index.html
@@ -11,36 +11,60 @@
       href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
+  <header class="header">
+    <h1>わたしの自己紹介サイト</h1>
+  </header>
+
   <body class="body">
     <div class="cover cover-home">
-      <header class="header">
-        <nav class="nav">
-          <ul>
-            <li><a href="#profile">プロフィール</a></li>
-            <li><a href="#hobbies">趣味</a></li>
-          </ul>
-        </nav>
-        <h1>わたしの自己紹介サイト</h1>
-      </header>
+      <h1>Welcome! My HOMEPAGE</h1>
     </div>
     <main>
-      <section id="profile">
-        <h2>プロフィール</h2>
-        <p>
-          こんにちは、わたしは[あなたの名前]です。これはわたしの自己紹介サイトです。
-        </p>
-      </section>
-      <section id="hobbies">
-        <h2>趣味</h2>
-        <ul>
-          <li>読書</li>
-          <li>旅行</li>
-          <li>プログラミング</li>
-        </ul>
+      <section id="profile-hobbies" class="combined-section">
+        <h2>ABOUT ME & HOBBY</h2>
+        <div class="combined-content">
+          <div class="photo-section">
+            <div class="photo-box profile-box">
+              <img src="images/profile.jpeg" />
+            </div>
+          </div>
+          <div class="text-section">
+            <div class="profile-text">
+              <h3>ABOUT ME</h3>
+              <p>
+                京都府立京都すばる高等学校情報科学科出身です。<br>
+                <strong>訳あって京都府警察サイバー企画課とは仲が良いです。</strong><br>
+                宇治市に住んでいます、抹茶は嫌いです。<br>
+                小学校の蛇口からは麦茶が出てました。<br>
+                
+              </p>
+            </div>
+            <div class="hobbies-text">
+              <h3>HOBBY</h3>
+              <ul>
+                <li><a href="games.html">🎮 GAMES</a></li>
+                <li><a href="table-tennis.html">🏓 TABLE TENNIS</a></li>
+                <li><a href="eating.html">🍔 EATING</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="footer">
